# MistaGoustan-milk

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Milk.sln  README.md
Milk/: Component.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  IdGenerator.cpp  IdGenerator.h  Level.cpp  Level.h  LevelBuilder.cpp  LevelBuilder.h  LevelLoader.cpp  LevelLoader.h  Milk.vcxproj  Milk.vcxproj.filters  Player.cpp  Player.h  ResourceManager.cpp  ResourceManager.h  Texture.h  Tilemap.cpp  Tilemap.h  TilemapLayer.cpp  TilemapLayer.h  TilemapTile.cpp  TilemapTile.h  TilemapTileInstance.h  main.cpp
Milk/res/: player.lua  testmap.xml
Milk/src/components/: Behavior.cpp  Behavior.h  Sprite.cpp  Sprite.h  Velocity.cpp  Velocity.h
Milk/src/core/: Actor.cpp  Actor.h  ActorComponent.cpp  ActorComponent.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Level.cpp  Level.h  Scene.cpp  Scene.h  System.h
Milk/src/game/: Player.cpp  Player.h  PlayerBehavior.cpp  PlayerBehavior.h
Milk/src/luahandles/: LuaHandle_Actor.cpp  LuaHandle_Actor.h
Milk/src/math/: Vector2d.h
Milk/src/systems/: Logic.cpp  Logic.h  Physics.cpp  Renderer.cpp  Renderer.h  System.h
Milk/src/tilemap/: Tilemap.h
Milk/src/utilities/: IdGenerator.cpp  IdGenerator.h  Input.cpp  Input.h  LevelLoader.cpp  LevelLoader.h  ResourceManager.cpp  Texture.cpp  Texture.h  Timer.cpp  Timer.h
cmake/: FindLua53.cmake  FindPhysSF.cmake
main/: CMakeLists.txt  main.cpp
res/: balls.xml  config.lua  inside.xml  main_scene.json  player.lua  testmap.xml  tilemap.aseprite
src/: CMakeLists.txt  main.cpp
src/assetcache/: AssetCache.h
src/assetcache/adapter/: TextureCache.cpp  TextureCache.h  TextureCacheAdapter.cpp  TextureCacheAdapter.h
src/components/: Animator.cpp  Animator.h  Behavior.cpp  Behavior.h  BoxCollider.cpp  BoxCollider.h  CMakeLists.txt  Script.cpp  Script.h  Sprite.cpp  Sprite.h  Velocity.cpp  Velocity.h
src/core/: Actor.cpp  Actor.h  ActorComponent.cpp  ActorComponent.h  CMakeLists.txt  Game.cpp  Game.h  IScene.h  Scene.cpp  Scene.h  SystemManager.cpp  SystemManager.h
src/debugtools/: DebugTools.cpp  DebugTools.h
src/events/: EventQueue.cpp  EventQueue.h  GameEvents.h
src/filesystem/: Filesystem.h
src/filesystem/adapter/: FilesystemAdapter.cpp  FilesystemAdapter.h
src/game/: Game.cpp  Game.h
src/graphics/: Animator.cpp  Animator.h  Camera.cpp  Camera.h  Graphics.cpp  Graphics.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h  Tilemap.h
src/input/: Keyboard.cpp  Keyboard.h
src/luahandles/: CMakeLists.txt  LuaActor.cpp  LuaActor.h  LuaCollisionEvent.cpp  LuaCollisionEvent.h  LuaGame.cpp  LuaGame.h  LuaHandleRegistry.h  LuaHandle_Actor.cpp  LuaHandle_Actor.h  LuaHandle_BoxCollider.cpp  LuaHandle_BoxCollider.h  LuaHandle_CollisionEvent.cpp  LuaHandle_CollisionEvent.h  LuaHandle_Input.cpp  LuaHandle_Input.h  LuaScene.h
src/math/: CMakeLists.txt  Rectangle.h  Vector2d.h
src/physics/: BoxCollider.cpp  BoxCollider.h  Physics.cpp  Physics.h  SpatialPartitionGrid.cpp  SpatialPartitionGrid.h  Velocity.cpp  Velocity.h
src/runtime/: Game.cpp  Game.h
src/scene/: Actor.cpp  Actor.h  ActorComponent.cpp  ActorComponent.h  Camera.cpp  Camera.h  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  SceneManager.cpp  SceneManager.h
src/scripting/: Logic.cpp  Logic.h  Script.cpp  Script.h
src/scripting/api/: LuaActor.cpp  LuaActor.h  LuaApi.cpp  LuaApi.h  LuaCollisionEvent.cpp  LuaCollisionEvent.h  LuaGame.cpp  LuaGame.h  LuaHandleRegistry.h  LuaScene.cpp  LuaScene.h  LuaSceneManager.cpp  LuaSceneManager.h  LuaWindow.cpp  LuaWindow.h
src/systems/: ActorEventList.h  ActorEventQueue.cpp  ActorEventQueue.h  CMakeLists.txt  CollisionWorld.h  DebugRenderer.cpp  DebugRenderer.h  DebugTools.cpp  DebugTools.h  EventQueue.cpp  EventQueue.h  GameEvents.h  Graphics.cpp  Graphics.h  Logic.cpp  Logic.h  Physics.cpp  Physics.h  Renderer.cpp  Renderer.h  SceneManager.cpp  SceneManager.h  SpatialPartitionGrid.cpp  SpatialPartitionGrid.h
src/systems/events/: EventQueue.cpp
src/systems/graphics/: Animator.cpp  Camera.cpp  Graphics.cpp  Sprite.h
src/systems/input/: Keyboard.h
src/systems/physics/: BoxCollider.cpp  Physics.cpp  SpatialPartitionGrid.h
src/systems/scripting/: Logic.cpp  Script.cpp
src/systems/scripting/api/: LuaActor.cpp  LuaCollisionEvent.cpp  LuaHandleRegistry.h  LuaScene.cpp
src/systems/tools/: DebugTools.cpp
src/tilemap/: CMakeLists.txt  Tilemap.h
src/tools/: DebugTools.cpp  DebugTools.h
src/utilities/: Alignment.h  AssetLoader.h  CMakeLists.txt  Camera.cpp  Camera.h  IdGenerator.cpp  IdGenerator.h  Input.cpp  Input.h  ResourceManager.cpp  ResourceManager.h  SceneLoader.cpp  SceneLoader.h  SceneManager.cpp  SceneManager.h  Texture.cpp  Texture.h  Timer.cpp  Timer.h  Window.cpp  Window.h
src/window/: Renderer.h  Window.cpp  Window.h
src/window/adapter/: RendererAdapter.cpp  RendererAdapter.h  WindowAdapter.cpp  WindowAdapter.h
test/: CMakeLists.txt  main.cpp
test/mocks/core/: MActorComponent.h  MScene.h
test/mocks/events/: MGameEvent.h  MockGameEvent.h
test/mocks/graphics/: MTextureLoader.h  MockTextureCache.h  MockTextureLoader.h
test/mocks/scene/: MockActorComponent.h
test/tests/core/: ActorTests.h  SceneTests.h
test/tests/events/: EventQueueTests.h
test/tests/graphics/: AnimatorTests.h  CameraTests.h  SpriteTests.h
test/tests/scene/: ActorTests.h  SceneTests.h
